--- a/backend/backend/edge/templates/edge/main.html
+++ b/backend/backend/edge/templates/edge/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,6 +95,44 @@ border-radius: 10px;
 </div>
 </div>
 
+
+<script>
+  if (pull==2){
+    <canvas id="myChart" style="width:100%;max-width:600px;display: inline-block; margin-top: 30px;margin-left: 30px;box-shadow:rgb(0, 0, 0, 0.4) -5px 5px 5px 5px, rgba(0, 0, 0, 0.3) -10px 10px, rgba(0, 0, 0, 0.2) -15px 15px, rgba(0, 0, 0, 0.1) -20px 20px, rgba(0, 0, 0, 0.05) -25px 25px;"></canvas>
+const xValues = [100,200,300,400,500,600,700,800,900,1000];
+
+new Chart("myChart", {
+  type: "line",
+  data: {
+    labels: xValues,
+    datasets: [{ 
+      data: [860,1140,1060,1060,1070,1110,1330,2210,7830,2478],
+      borderColor: "red",
+      fill: false
+    }, { 
+      data: [1600,1700,1700,1900,2000,2700,4000,5000,6000,7000],
+      borderColor: "green",
+      fill: false
+    }, { 
+      data: [300,700,2000,5000,6000,4000,2000,1000,200,100],
+      borderColor: "blue",
+      fill: false
+    }]
+  },
+  options: {
+    legend: {display: false}
+  }
+});}
+</script>
+<button id="pull" class="buttonclass" style="width: 8%;height: 8vh;border-radius: 10px;background-color: white; border-color: #e00;">PULL</button>
+<script>
+  var btn = document.getElementById("buttonId");
+  
+  btn.addEventListener("click", function(){
+
+      pull = 2;
+  });
+</script>
   </body>
   <style>
     .heart{
@@ -112,7 +151,7 @@ border-radius: 10px;
       font-size: 60px;
       margin: 3%;
     
-    
+    }
   </style>
   </body>
 </html>
