--- a/backend/backend/edge/templates/edge/main.html
+++ b/backend/backend/edge/templates/edge/main.html
@@ -38,7 +38,7 @@
      <div>
        <h6 style="text-align:left;font-size: large;position:absolute;; margin: 5px; padding: 50px;" >TIME</h6>
        <h6 style="text-align: center;font-size: large;position: absolute;left: 11%;margin: 5px; padding: 50px;">TEMPRATURE(&deg C)</h6>
-       <h6 style="text-align: center;font-size: large;position: absolute;left: 19.5%;margin: 5px; padding: 50px;">HEART RATE(BPM)</h6>
+       <h6 style="text-align: center;font-size: large;position: absolute;left: 21.5%;margin: 5px; padding: 50px;">HEART RATE(BPM)</h6>
        
      </div>
      <div style="height: 4vh;
@@ -46,47 +46,47 @@
                   width: 85%;
                   border-radius: 10px;
                   box-shadow: red 0px -1px 2px -1px;">
-      <h3 id='31' style="text-align: left;display: inline-block; margin-right: 355px;margin-left: 30px;"></h3>
-      <h3 id='01' style="position:absolute;  margin-right: 255px;margin-left: 260px; top:14vh;"></h3>
-      <h3 id='11' style="text-align: center;display: inline-block;"></h3>
+      <h3 id='31' style="text-align: left;display: inline-block; margin-right: 300px;margin-left: 30px;"></h3>
+      <h3 id='01' style="position:absolute;  margin-right: 200px;margin-left: 290px; top:15.5vh;"></h3>
+      <h3 id='11' style="text-align: center;display: inline-block;margin-right: 50px;"></h3>
     </div>
     <div style="height: 4vh;
     width: 85%;
     border-radius: 10px;
     box-shadow: red 0px -1px 2px -1px;">
- <h3 id='32' style="text-align: left;display: inline-block; margin-right: 355px;margin-left: 30px;"></h3>
- <h3  id='02'style="; margin-right: 255px;margin-left: 260px;position:absolute;top:18vh;"></h3>
+ <h3 id='32' style="text-align: left;display: inline-block; margin-right: 300px;margin-left: 30px;"></h3>
+ <h3  id='02'style="; margin-right: 255px;margin-left: 290px;position:absolute;top:19.5vh;"></h3>
 <h3  id='12' style="text-align: center; display: inline-block;"></h3>
 </div>
 <div style="height: 4vh;
 width: 85%;
 border-radius: 10px;
  box-shadow: red 0px -1px 2px -1px;">
- <h3 id='33' style="text-align: left;display: inline-block; margin-right: 355px;margin-left: 30px;"></h3>
- <h3 id='03' style="position:absolute;top:22vh; margin-right: 255px;margin-left: 260px;"></h3>
+ <h3 id='33' style="text-align: left;display: inline-block; margin-right: 300px;margin-left: 30px;"></h3>
+ <h3 id='03' style="position:absolute;top:23.5vh; margin-right: 255px;margin-left: 290px;"></h3>
 <h3 id='13' style="text-align: center; display: inline-block;"></h3>
 </div>
 <div style="height: 4vh;
 width: 85%;
 border-radius: 10px;
  box-shadow: red 0px -1px 2px -1px;">
- <h3 id='34' style="text-align: left;display: inline-block; margin-right: 355px;margin-left: 30px;"></h3>
- <h3  id='04'style="position:absolute; top:26vh; margin-right: 255px;margin-left: 260px;"></h3>
+ <h3 id='34' style="text-align: left;display: inline-block; margin-right: 300px;margin-left: 30px;"></h3>
+ <h3  id='04'style="position:absolute; top:27.5vh; margin-right: 255px;margin-left: 290px;"></h3>
 <h3 id='14' style="text-align: center; display: inline-block;"></h3>
 </div>
 <div style="height: 4vh;
 width: 85%;
 border-radius: 10px;
  box-shadow: red 0px -1px 2px -1px;">
- <h3 id='35' style="text-align: left;display: inline-block; margin-right: 355px;margin-left: 30px;"></h3>
- <h3  id='05'style="position:absolute; top:30vh; margin-right: 255px;margin-left: 260px;"></h3>
+ <h3 id='35' style="text-align: left;display: inline-block; margin-right: 300px;margin-left: 30px;"></h3>
+ <h3  id='05'style="position:absolute; top:31.5vh; margin-right: 255px;margin-left: 290px;"></h3>
  
-<h3 id='15' style="text-align: center; display: inline-block;">_</h3>
+<h3 id='15' style="text-align: center; display: inline-block; "></h3>
 </div>
 </div>
 
 <div id="div2" style="display: none;">
-  <canvas id="myChart" style="background-color: white; width:100%;max-width:800px;height: 10vh; position: absolute;top: 3vh;left: 50%; margin-top: 30px;margin-left: 30px;box-shadow:rgb(0, 0, 0, 0.4) -5px 5px 5px 5px, rgba(0, 0, 0, 0.3) -10px 10px, rgba(0, 0, 0, 0.2) -15px 15px, rgba(0, 0, 0, 0.1) -20px 20px, rgba(0, 0, 0, 0.05) -25px 25px;"></canvas>
+  <canvas id="myChart" style="border-radius: 10px; background-color: white; width:70%;max-width:900px;height: 50%;max-height: 340px; position: absolute;top: 2.75vh;left: 50%; margin-top: 0px;margin-left: 30px;box-shadow:rgb(0, 0, 0, 0.4) -5px 5px 5px 5px, rgba(0, 0, 0, 0.3) -10px 10px, rgba(0, 0, 0, 0.2) -15px 15px, rgba(0, 0, 0, 0.1) -20px 20px, rgba(0, 0, 0, 0.05) -25px 25px;"></canvas>
 <script>
   
    
